sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:7: error: not found: value max
    max=getValeur(i);
    ^